--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.17.1",
     "jest": "^26.4.2",
     "joi": "^17.2.1",
     "joi-objectid": "^3.0.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "supertest": "^4.0.2",
     "winston": "^3.3.3"
   },
