--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.2.1",
     "joi-objectid": "^3.0.1",
     "lodash": "^4.17.20",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
