--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scrollspy": "^3.4.3",
     "react-toastify": "^4.1.0"
   },
   "scripts": {
