--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
+    "react-animated-heart": "0.0.5",
     "react-bootstrap": "^1.3.0",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
