--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.20",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
